# agenticaitypeshi

./: .gitignore  1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_toolcall.ipynb  main.py  pyproject.toml  simple_chatbot.py
